--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -263,6 +263,8 @@ women's liberal arts college in the northeast US. The description of the
 samples section below contains more detail about equivalence analyses to
 support the decision to combine these two samples.
 
+\subsection{Post interaction Measures}\label{post-interaction-measures}
+
 \begin{table}[tbp]
 \begin{center}
 \begin{threeparttable}
@@ -302,8 +304,6 @@ Actor's cognitive performance & 5.03 & 2.29\\
 \end{threeparttable}
 \end{center}
 \end{table}
-
-\subsection{Post interaction Measures}\label{post-interaction-measures}
 
 The following measures were collected in the order they are presented
 following the interaction. Correlations appear in
@@ -441,9 +441,6 @@ who did not identify with either gender category, formed Sample 2. For
 consistency, we limited participant data to same sex female pairs at the
 two colleges.
 
-There were some similar correaltions bewtween study variables across
-samples.
-
 Due these similarities across samples in regard to correlation patterns
 between significant variables within this study, the two datasets were
 combined. These participants were mostly first-year college students,
@@ -486,6 +483,8 @@ Wickham, 2019), \emph{tibble} (Version 2.1.3; Müller \& Wickham, 2019),
 and \emph{xtable} (Version 1.8.3; Dahl, Scott, Roosen, Magnusson, \&
 Swinton, 2019) for all our analyses.
 
+\subsection{Analysis Strategy}\label{analysis-strategy}
+
 \begin{figure}
 \includegraphics[width=400px]{APIM_figure} \caption{Basic actor-partner interdependence model (APIM) depiction.}\label{fig:apim}
 \end{figure}
@@ -493,8 +492,6 @@ Swinton, 2019) for all our analyses.
 \begin{figure}
 \includegraphics[width=400px]{2016_figure} \caption{Path Analysis Model from Garcia et al. (2016) study with distinguishable dyads.}\label{fig:2016figure}
 \end{figure}
-
-\subsection{Analysis Strategy}\label{analysis-strategy}
 
 This study sought to replicate the results of Garcia et al. (2016)'s
 study, done with male-female pairs, which used a dyadic path analysis to
@@ -560,11 +557,11 @@ tests for scales.) There are no statistically significant differences
 between samples in demographics including age, STATS, and ethnicity,
 STATS.
 
+\subsection{Main Results}\label{main-results}
+
 \begin{figure}
 \includegraphics[width=400px]{SEMfigure} \caption{Path Analysis Model with Estimates}\label{fig:semfigure}
 \end{figure}
-
-\subsection{Main Results}\label{main-results}
 
 All model estimates and p-values are found in Table~\ref{tab:mlm} and
 the relationships with estimates included are depicted in
@@ -575,29 +572,30 @@ partner effect of other objectification and SSO (specifically men's
 objectification of women and women's SSO). As expected, the partner
 effect of other-objectification on SSO in the current all-women sample
 was statistically signficant, \emph{b} = 0.29, \emph{SE} = 0.12,
-\emph{p} = .017, replicating Garcia et al. (2016)'s fiding. One's own
+\emph{p} = .019, replicating Garcia et al. (2016)'s fiding. One's own
 other objectification had no effect on SSO, \emph{b} = -0.16, \emph{SE}
-= 0.12, \emph{p} = .193. Contrary to past finding however, there was no
+= 0.12, \emph{p} = .210. Contrary to past finding however, there was no
 statistically significant interaction of partner's other objectification
-and the person's trait self-objectification on SSO, \emph{b} = -0.02,
-\emph{SE} = 0.04, \emph{p} = .589. There was also no significant main
+and the person's trait self-objectification on SSO, \emph{b} = 0.03,
+\emph{SE} = 0.27, \emph{p} = .910. There was also no significant main
 effect of trait self-objectification on SSO \emph{b} = 0.07, \emph{SE} =
-0.05, \emph{p} = .170.
+0.05, \emph{p} = .183.
 
 Contrary to expectations, there was no significant effect of SSO on
 interaction authenticity, although the estimate of this effect was in
-the hypothesized negative direction, \emph{b} = -0.09, \emph{SE} = 0.11,
-\emph{p} = .415. Because authenticity was a composite score of 9 items,
+the hypothesized negative direction, \emph{b} = -0.09, \emph{SE} = 0.12,
+\emph{p} = .431. Because authenticity was a composite score of 9 items,
 two of which were interaction specific authenticity items, we also
-tested the effect of SSO on these items individually\ldots{}ADD
-ANALYSIS\ldots{}Although we hypothesized that SSO would mediate the
-relationship between partner's other objectification and interaction
-authenticity, after finding no relationship bewteen SSO and authencity,
-we also tested if the partner's other objectification had a direct
-effect on authenticity, but this effect was not significant, \emph{b} =
-0.05, \emph{SE} = 0.11, \emph{p} = .662 (nor was the total effect of
-partner's other objectification on authenticity, \emph{b} = 0.02,
-\emph{SE} = 0.1, \emph{p} = .855).
+estimated the pairwise correlations bewteen SSO and all these items
+individually. They were all small, ranging from only -0.01 to -0.14.
+Although we hypothesized that SSO would mediate the relationship between
+partner's other objectification and interaction authenticity, after
+finding no relationship bewteen SSO and authencity, we also tested if
+the partner's other objectification had a direct effect on authenticity,
+but this effect was not significant, \emph{b} = 0.06, \emph{SE} = 0.12,
+\emph{p} = .608 (nor was the total effect of partner's other
+objectification on authenticity, \emph{b} = 0.03, \emph{SE} = 0.11,
+\emph{p} = .787).
 
 Lastly, althought there was no evidence that SSO was related to
 interaction authenticity in the current sample, we tested if interaction
@@ -605,21 +603,21 @@ authenticity (composite of nine items) had effects on cognitive
 performace, career aspirations, and relationship agency, as it did in
 Garcia et al. (2016). We again used MLM and thus, these efefcts were
 tested in three separate models. There was no significant effect of
-interaction authenticity on cognitive performance, \emph{b} = 0.31,
-\emph{SE} = 0.28, \emph{p} = .262, but authenticity was significantly
-positively related to both career aspirations, \emph{b} = 0.19,
-\emph{SE} = 0.07, \emph{p} = .009, and relationships agency, \emph{b} =
-0.23, \emph{SE} = 0.12, \emph{p} = .048. There was no direct effect of
-SSO on cognitive performance, \emph{b} = 0.05, \emph{SE} = 0.25,
-\emph{p} = .846, and no direct effect of partner's other objectificaiton
-on cognifitve performance, \emph{b} = 0.03, \emph{SE} = 0.26, \emph{p} =
-.900. There was no direct effect of SSO on career aspirations, \emph{b}
-= 0.03, \emph{SE} = 0.06, \emph{p} = .653, and no direct effect of
-partner's other objectificaiton on career aspirations, \emph{b} = -0.05,
-\emph{SE} = 0.06, \emph{p} = .405. There was no direct effect of SSO on
-relationship agency, \emph{b} = -0.04, \emph{SE} = 0.11, \emph{p} =
-.699, and no direct effect of partner's other objectificaiton on
-relationship agency, \emph{b} = -0.07, \emph{SE} = 0.1, \emph{p} = .474.
+interaction authenticity on cognitive performance, \emph{b} = 0.32,
+\emph{SE} = 0.28, \emph{p} = .258, but authenticity was significantly
+positively related to both career aspirations, \emph{b} = 0.18,
+\emph{SE} = 0.07, \emph{p} = .010, and relationships agency, \emph{b} =
+0.23, \emph{SE} = 0.12, \emph{p} = .049. There was no direct effect of
+SSO on cognitive performance, \emph{b} = 0.04, \emph{SE} = 0.25,
+\emph{p} = .872, and no direct effect of partner's other objectificaiton
+on cognifitve performance, \emph{b} = 0.01, \emph{SE} = 0.27, \emph{p} =
+.962. There was no direct effect of SSO on career aspirations, \emph{b}
+= 0.03, \emph{SE} = 0.06, \emph{p} = .657, and no direct effect of
+partner's other objectificaiton on career aspirations, \emph{b} = -0.06,
+\emph{SE} = 0.07, \emph{p} = .378. There was no direct effect of SSO on
+relationship agency, \emph{b} = -0.05, \emph{SE} = 0.11, \emph{p} =
+.659, and no direct effect of partner's other objectificaiton on
+relationship agency, \emph{b} = -0.1, \emph{SE} = 0.11, \emph{p} = .365.
 
 The results were similar for analyses conducted on Sample 1 and Sample 2
 individually. See the online supplemental material for more detail on
