worked on intro

--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -233,6 +233,7 @@ prompt on the computer screen told the participants that they were
 assigned to the \enquote{College Relationships} condition and gave the
 following instructions:
 
+\begin{quote}
 There are many types of relationships people form in college. During the
 interaction, please think about your partner's potential as a romantic
 partner. Even if they are not the gender you are attracted to, you can
@@ -241,6 +242,16 @@ you will be asked to evaluate how dateable your partner is. In other
 words, we would like to know if you think someone would date your
 interaction partner. Also, your interaction partner will be evaluating
 you in the same manner.
+\end{quote}
+
+The decision was made to ask even heterosexual women to judge their
+women partners as potential romantic partners. We felt that this prompt
+would keep the study closest to a replication of the previous Garcia et
+al. (2016) version of the study. Past research has found that women,
+largely due to an increase self-objectifying state, are indeed able to
+evaluate other women's potential as romantic partners--indeed, women may
+be unfortunutely used to thinking this way about themselves, and we
+suspect other women.
 
 Two participants were then brought into a larger interaction room where
 they sat on stools prearranged to be 36 inches apart. The experimenter
@@ -340,6 +351,16 @@ their partner's internal traits (\(\alpha\) = 0.79 for Sample 1,
 indicate that the participant thought about their partner's external
 traits more than the partner's internal traits, and a negative score
 would indicate the opposite.
+
+As can be seen in Table~\ref{tab:descriptives}, the mean
+other-objectification of women by women was \emph{M =} -1.58 (\emph{SD
+=} 1.21). This corresponds to women objectifying other women to a
+\emph{greater} extent than women's objectification of men reported in
+Garcia et al. (2016) (\emph{M =} -1.68, \emph{SD =} 1.52). Further, in
+the current sample the difference in other-objectification between
+heterosexual (\emph{M =} -1.77, \emph{SD =} 1.14) and non-heterosexual
+women (\emph{M =} -1.39, \emph{SD =} 1.35) was not statistically
+significant, \emph{t}(25.89) = 1.02, \emph{p =} 0.32.
 
 \subsubsection{Interaction Authenticity}\label{interaction-authenticity}
 
@@ -525,8 +546,9 @@ considered in the degrees of freedom calculations for fit estimations
 independence model and the corresponding fit measure should be
 re-calculated for indistinguishable dyads models. The current study uses
 dyadic multilevel modeling (MLM) to test all relationships and mediation
-paterns. See Ledermann and Kenny (2017) for a more complete discussion
-of the considerations for using SEM versus MLM for dyadic analysis.
+paterns. The online supplementary materials contains analysis using SEM.
+See Ledermann and Kenny (2017) for a more complete discussion of the
+considerations for using SEM versus MLM for dyadic analysis.
 
 Testing the Garcia et al. (2016) model on the current, same-gender,
 sample, involves using the Actor-Partner Independence Model (APIM)
@@ -546,7 +568,8 @@ research theorizing about these linkages.
 Before moving to the main analyses, we discuss statistical equivalence
 test that provide support for combining Sample 1 and Sample 2 in one
 analysis sample. The online supplemental material contains the main
-analyses separated by samples.
+analyses separated by samples. All results presented below are from
+models including sample as a control variable.
 
 \subsubsection{Combining Samples}\label{combining-samples}
 
