--- a/references.bib
+++ b/references.bib
@@ -20,6 +20,101 @@
   publisher={American Psychological Association}
 }
 
+@article{harsey2020men,
+  title={Men and women’s self-objectification, objectification of women, and sexist beliefs},
+  author={Harsey, Sarah J and Zurbriggen, Eileen L},
+  journal={Self and Identity},
+  pages={1--8},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+@article{@article{meltzer2020women,
+  title={Women can benefit from sexual and physical valuation in the context of a romantic relationship},
+  author={Meltzer, Andrea L},
+  journal={Personality and Social Psychology Bulletin},
+  volume={46},
+  number={2},
+  pages={243--257},
+  year={2020},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+},
+  title={Women can benefit from sexual and physical valuation in the context of a romantic relationship},
+  author={Meltzer, Andrea L},
+  journal={Personality and Social Psychology Bulletin},
+  volume={46},
+  number={2},
+  pages={243--257},
+  year={2020},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{strelan2018birds,
+  title={Birds of a feather flock together: The interpersonal process of objectification within intimate heterosexual relationships},
+  author={Strelan, Peter and Pagoudis, Stephenie},
+  journal={Sex Roles},
+  volume={79},
+  number={1-2},
+  pages={72--82},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{gervais2020social,
+  title={The Social Interaction Model of Objectification: A process model of goal-based objectifying exchanges between men and women},
+  author={Gervais, Sarah J and S{\'a}ez, Gemma and Riemer, Abigail R and Klein, Olivier},
+  journal={British Journal of Social Psychology},
+  volume={59},
+  number={1},
+  pages={248--283},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{sanchez2008romance,
+  title={The romance of self-objectification: Does priming romantic relationships induce states of self-objectification among women?},
+  author={Sanchez, Diana T and Broccoli, Tara L},
+  journal={Sex Roles},
+  volume={59},
+  number={7-8},
+  pages={545--554},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{strelan2005women,
+  title={Women who objectify other women: The vicious circle of objectification?},
+  author={Strelan, Peter and Hargreaves, Duane},
+  journal={Sex roles},
+  volume={52},
+  number={9-10},
+  pages={707--712},
+  year={2005},
+  publisher={Springer}
+}
+
+@article{loughnan2015exploring,
+  title={Exploring the role of culture in sexual objectification: A seven nations study},
+  author={Loughnan, Steve and Fernandez-Campos, Silvia and Vaes, Jeroen and Anjum, Gulnaz and Aziz, Mudassar and Harada, Chika and Holland, Elise and Singh, Indramani and Puvia, Elisa and Tsuchiya, Koji},
+  journal={Revue internationale de psychologie sociale},
+  volume={28},
+  number={1},
+  pages={125--152},
+  year={2015},
+  publisher={Presses universitaires de Grenoble}
+}
+
+@article{puvia2013being,
+  title={Being a body: Women’s appearance related self-views and their dehumanization of sexually objectified female targets},
+  author={Puvia, Elisa and Vaes, Jeroen},
+  journal={Sex roles},
+  volume={68},
+  number={7-8},
+  pages={484--495},
+  year={2013},
+  publisher={Springer}
+}
+
 @article{garcia2015moderation,
   title={Moderation in the actor--partner interdependence model},
   author={Garcia, Randi L and Kenny, David A and Ledermann, Thomas},
