--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -65,24 +65,45 @@ library(xtable)
 ```
 
 
-Theorists across diverse disciplines have explored the multiple ways that the body conveys social meaning, as well as how these meanings shape gendered experiences, especially during interpersonal interactions with members of different social groups [@Kaschak, @garcia2016objectification]. Objectification theory, a valuable theoretical framework proposed by @robertsfredrickson which works to contextualize female bodies as socio-cultural constructions, can be employed to illuminate the gender oppression and negative lived experiences of girls and women. Empirical evidence illustrates how women continue to be objects of interpersonal discrimination and expereince daily sexist hassles [@swimetal]. One form of interpersonal discrimination women face is the process by which their whole being is viewed as a collection of sexualized body parts valued predominantly for commodification, a phenomena termed sexual objectification [@Bartky]. Sexual objectification occurs with both “endless variety and monotonous similarity,” and is thus mediated by unique combinations of race, ethnicity, sexuality, age, and class [@fredricksonetal2011; @rubin1975, cited in @frasernicholson1989, p. 28]. Amid such heterogeneity though, “having a reproductively mature female body” proposed by @robertsfredrickson is likely to create a shared vulnerability to sexual objectification and a variety of shared negative experiences as a result. 
+OUTLINE
+  - Introduction: Objectification theory says stuff. Recently we've learned about interpersonal objectification but we only know it about mixed gender. We know women objectify each other, but what about in interpersonal interactions?
+  - Self-objectification
+    - SSO versus TSO
+    - Does this process of self-objectification also lead women to objectify other women?
+  - Women objectifying other women
+    - Lots of evidence, but we don't know if this happens interpersonally
+  - Interpersonal objectifcation research is a whole thing now, but there are no studies (or theoretical models) that include women-on-women interpersonal objectification processes. 
+  - Relationships and objectification 
+    - Both romantic relationships and relationships in general have been studies in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships. 
+  - Authenticity paragraph?
+  - Current Study
+  - Alternative predictions
+  
+    
+@robertsfredrickson's Objectification Theory, suggests that women are objectified in interpersonal encounters, and that the effect might be strongest from men, but possibly also from women. Psychological researchers studying the sexual objectification of women, and the resulting self-objectification that follows, have in recent years explored the interpersonal process of the objectification - self-objectification link. For exmaple, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men's reported objectificaiton of their female interaction partner during an interaction was associated with increased sefl-objectification reported by their partner. @gervais2020social has reviewed the literature on interpersonal self-objectification and has organized the the process in a theoretical model called the SIMO, but this model is only relevant for mixed-gender encouters. Although there is ample evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there is currently no studies investigating the process of interpersonal objectification same-gender interactions. Does objectification by a female interaction partner have the same downstream negative consequences as being objectified by a male interaction partner? For example, perhaps women could be amplifying each others' self-objectification as they get ready to go out for the night, *before* the theoretical encounters with men outlined in @gervais2020social occur. 
 
-Self-objectification is a multidimensional process that accounts for the cognitive mechanism that translates experiences of sexualization at the cultural level to psychological (e.g., anxiety, self-esteem, authenticity, motivational states) and behavioral (cognitive performance, body monitoring) features of mental health and well-being at the individual level [@calogero2011; @moradi2008]. @calogero2011 proposes that the construct of self-objectification can be conceptualized as a learned trait. Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines, which can lead to a state of self-objectification [@calogero2011, @moradi2008]. Being objectified by another person and possessing trait-level self-objectification (TSO) may interact to influence experiences of feeling like a body, or state self-objectification (SSO) [CITE swimsuit sweater, @garcia2016objectification]. 
+Self-objectification is a multidimensional process that accounts for the cognitive mechanism that translates experiences of sexualization at the cultural level to psychological (e.g., anxiety, self-esteem, authenticity, motivational states) and behavioral (cognitive performance, body monitoring) features of mental health and well-being at the individual level [@calogero2011; @moradi2008]. @calogero2011 proposes that the construct of self-objectification can be conceptualized as a learned trait. Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines, which can lead to a state of self-objectification [@calogero2011, @moradi2008]. Being objectified by another person and possessing trait-level self-objectification (TSO) may interact to influence experiences of feeling like a body, or state self-objectification (SSO) [CITE swimsuit sweater, @garcia2016objectification]. Does this habit self-objectification lead women to also objectify other women, possibly to compare oneself? 
 
-Studies have shown that within social encounters women are gazed at more than men [@briton1995, CITE saguy skype study, calogero video walking study], often times feel ‘looked at’ within interpersonal interactions [@argyle1969], and will more than likely internalize the objectifying gaze on physical self [@young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredricksonetal1998]. 
+Some studies have found that women objectify other women to a greater extent than they objectify men [@loughnan2015exploring]. Women objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but we know next to nothing about interpersonal sexual objectification among women and what the immediate effects might be. Further, do women objectify non-sexualized women they are interacting with? What might be different for same-gender interactions? @harsey2020men found that self-objectification was related to the objectification of women to a similar degree for men and women participants, although men scored high than women on a measure of belief that objectification of women is natural for men. 
 
-ENTIRE PARAGRAPH ON MODERN (POST-2016) STUDIES OF INTERPERSONAL OBJECTIFICATION. 
+SIMO model and literature review [@gervais2020social]. Studies have shown that within social encounters women are gazed at more than men [@briton1995, CITE saguy skype study, calogero video walking study], often times feel ‘looked at’ within interpersonal interactions [@argyle1969], and will more than likely internalize the objectifying gaze on physical self [@young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredricksonetal1998]. We don't know about women-on-women interpersonal objectification. What might be different?
 
-Empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@quinnetal]. 
+Self-objectification has been found to occur after a mere relationship prime among women [@sanchez2008romance] because in our culture women need to look attractive to obtain and maintain successfuol relationship, thus, the "college relationships condition may highten self-objectification and the evaluation of other women in a sexualized way. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, and women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship [@meltzer2020women], less is known about first dates. But this literature is also only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship biulding skills in general (including same-sex friendships) [CITE PWQ paper I reviewed, Yoder editor]. Empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@quinnetal]. 
+
+MAYBE SEPARATE PARAGRAPH ABOUT AUTHENTICITY LINK SPECIFICALLY. And how woman-woman interpersonal objectificaiton preocesses might diverge from this process. [again CITE PWQ paper I reviewed, Yoder editor]. 
 
 In the current study, we sought to examine what occurs during an interaction in which one or both partners are objectifying each other, similarly to @garcia2016objectification,  but between same-sex female interpersonal interactions. Moreover, the current study uses a face-to-face interaction paradigm and dyadic data analysis techniques to examine the effects for both women simultaneously. We expected to replicate the results found in @garcia2016objectification. We predicted that being objectified by one’s interaction partner would lead to self-objectification, which in turn would lead to feelings of inauthenticity, then reduced feelings of agency in romantic relationships, reduced career aspiration, and reduced cognitive performance. Specifically, we expected to find a positive relationship between other-objectification by one's partner and state self-objectification. We also expect to find a negative relationship between self-state objectification and interaction authenticity, and that interaction authenticity will be positively related to cognitive performance, relationship agency, and career aspirations.
+
+@puvia2013being would alternatively predict that women's tendency to self-objectify (TSO) leads them to objectify other women (...well, dehumanize a sexualized woman, but also @strelan2005women would predict the TSO->SOO link and @harsey2020men too), and this is mediated by the woman's own state self-objectification (SSO). So we also tested this as a possible alternative model.
 
 # Methods
 
 ##Procedure
 The procedure used was identical to that in @garcia2016objectification, except for the instructions that the participants were given. In brief, that methodology is that each participant arrived at the laboratory and were then led into separate cubicles to prevent any communication between the participants before the interaction. In addition, each participant was screened for prior acquaintance to confirm that they had not met prior to the study. They were asked to sign the consent form to participate, and the study was described as follows: “This is a study looking at how students form different types of relationships at college.” A prompt on the computer screen told the participants that they were assigned to the “College Relationships” condition and gave the following instructions:
 
-There are many types of relationships people form in college. During the interaction, please think about your partner's potential as a romantic partner. Even if they are not the gender you are attracted to, you can still judge their potential as a romantic partner. After the interaction you will be asked to evaluate how dateable your partner is. In other words, we would like to know if you think someone would date your interaction partner. Also, your interaction partner will be evaluating you in the same manner. 
+>There are many types of relationships people form in college. During the interaction, please think about your partner's potential as a romantic partner. Even if they are not the gender you are attracted to, you can still judge their potential as a romantic partner. After the interaction you will be asked to evaluate how dateable your partner is. In other words, we would like to know if you think someone would date your interaction partner. Also, your interaction partner will be evaluating you in the same manner. 
+
+The decision was made to ask even heterosexual women to judge their women partners as potential romantic partners. We felt that this prompt would keep the study closest to a replication of the previous @garcia2016objectification version of the study. Past research has found that women, largely due to an increase self-objectifying state, are indeed able to evaluate other women's potential as romantic partners--indeed, women may be unfortunutely used to thinking this way about themselves, and we suspect other women. 
 
 Two participants were then brought into a larger interaction room where they sat on stools prearranged to be 36 inches apart. The experimenter instructed the participants to “get to know each other” for 10 minutes and then left the room. After 10 minutes, the experimenter came back into the room and stopped the interaction. The participants then went back to their individual cubicles and completed a set of post-interaction measures. Participants were then thanked for their participation and debriefed @garcia2016objectification. The full methodology used is found in @garcia2016objectification’s study.
 
@@ -219,8 +240,17 @@ smith_extsoo_alpha <- psych::alpha(select(smith_final, otherint_1, otherint_2, o
                                           otherint_6, otherint_10))$total[2]
 smith_intsoo_alpha <- psych::alpha(select(smith_final, otherint_3, otherint_4, otherint_7, 
                                           otherint_8, otherint_9, otherint_11, otherint_12))$total[2]
+
+descsplit <- clarksmith_women %>%
+  group_by(sexor_A == 1) %>%
+  summarize(mean_soo = mean(a2pSOO_A, na.rm = TRUE),
+            sd_soo = sd(a2pSOO_A, na.rm = TRUE))
+
+soo_diff <- t.test(a2pSOO_A ~ (sexor_A == 1), data = clarksmith_women)
 ```
-To measure the participant’s objectification of their partner in the interaction, participants were asked a series of questions about the frequency of thoughts in relation to  multiple characteristics of their partner @garcia2016objectification. Questions included aspects of their partner’s internal traits such as personality, friends, family, and extracurricular interests, as well as external traits such as body, appearance, clothing, and body parts. All questions were to be rated on a scale from 1 (not at all) to 7 (constantly). Objectification was measured by getting the difference between the average frequency of thought about their partner’s external traits ($\alpha$ = `r printnum(clark_extsoo_alpha)[1,1]` for Sample 1, $\alpha$ = `r printnum(smith_intsoo_alpha)[1,1]` for Sample 2) and frequency of thought about their partner’s internal traits ($\alpha$ = `r printnum(clark_extsoo_alpha)[1,1]` for Sample 1, $\alpha$ = `r printnum(smith_extsoo_alpha)[1,1]` for Sample 2). A positive score in this scale would indicate that the participant thought about their partner’s external traits more than the partner’s internal traits, and a negative score would indicate the opposite.
+To measure the participant’s objectification of their partner in the interaction, participants were asked a series of questions about the frequency of thoughts in relation to  multiple characteristics of their partner @garcia2016objectification. Questions included aspects of their partner’s internal traits such as personality, friends, family, and extracurricular interests, as well as external traits such as body, appearance, clothing, and body parts. All questions were to be rated on a scale from 1 (not at all) to 7 (constantly). Objectification was measured by getting the difference between the average frequency of thought about their partner’s external traits ($\alpha$ = `r printnum(clark_extsoo_alpha)[1,1]` for Sample 1, $\alpha$ = `r printnum(smith_intsoo_alpha)[1,1]` for Sample 2) and frequency of thought about their partner’s internal traits ($\alpha$ = `r printnum(clark_extsoo_alpha)[1,1]` for Sample 1, $\alpha$ = `r printnum(smith_extsoo_alpha)[1,1]` for Sample 2). A positive score in this scale would indicate that the participant thought about their partner’s external traits more than the partner’s internal traits, and a negative score would indicate the opposite. 
+
+As can be seen in Table\ \@ref(tab:descriptives), the mean other-objectification of women by women was *M =* `r descriptives[3,1]` (*SD =* `r descriptives[3,2]`). This corresponds to women objectifying other women to a *greater* extent than women's objectification of men reported in @garcia2016objectification (*M =* -1.68, *SD =* 1.52). Further, in the current sample the difference in other-objectification between heterosexual (*M =* `r round(as.numeric(descsplit[2,2]),2)`, *SD =* `r round(as.numeric(descsplit[2,3]),2)`) and non-heterosexual women (*M =* `r round(as.numeric(descsplit[1,2]),2)`, *SD =* `r round(as.numeric(descsplit[1,3]),2)`) was not statistically significant, *t*(`r round(soo_diff$parameter,2)`) = `r round(soo_diff$statistic, 2)`, *p =* `r round(soo_diff$p.value,3)`. 
 
 ###Interaction Authenticity
 ```{r alpha_intauth}
@@ -606,7 +636,28 @@ Lastly, althought there was no evidence that SSO was related to interaction auth
 The results were similar for analyses conducted on Sample 1 and Sample 2 individually. See the online supplemental material for more detail on these analyses. 
 
 #Discussion
-As stated previously, we did not find a significant effect between actor SSO and actor authenticity ($\beta$= -.10, $p$=.38), which suggests that there is not sufficient evidence to support the claim that partner objectification is the cause for the diverse range of negative effects related to relationship inauthenticity. However, we did observe a significant partner effect of objectification on actor self-objectification, which does align with our hypothesis that theorized objectification from other women can also cause women to self-objectify just as they do within interactions between male-female pairs. The results of this study demonstrate the complex and ambivalent nature of female sexual objectification and additionally highlight the psychological and social consequences of such objectification processes on women’s social relationships and well-being. The sample of the current study was comprised of Western women, being that sexual objectification is most prevalent in this culture [@loughnan2015], and research on objectification conducted outside of Western or Westernized countries is scarce [@moradi2008]. Because “bodies exist within social and cultural contexts, and hence are also constructed through sociocultural practices and discourses” [@robertsfredrickson, p.174], it is important to consider how diverse social identities within unique cultural contexts may inform sexual objectification phenomenon to test the cross-cultural applicability of theoretical frameworks [@loughnan2015]. Further, sexualzing experiences and self-objectification are thought to begin a very young age, and thus, researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014; @bury2016]. Considering the fact that the average mean age of the investigated participants of this current study was 18.85 years, research among younger and older individuals is needed, especially because self-objectification may change over time [@robertsfredrickson]. It may be valuable to question the extent to which children, adolescents, or emerging adults of different races or ethnicities are exposed to varied amounts of sexulizing content. Also, future experiments or longitudinal studies should explore the external validity of the notions of self-objectification and how the operalization of self-objectification may be improved. Regardless, the results from the current analysis highlight how subtle forms of sexist discrimination operate to inform prevention and intervention efforts in both clinical and educational contexts. These results are quite useful for promoting mental health and within early action programs for girls and young women, where scholars and practitioners might provide the tools necessary to circumvent or mitigate negative effects on self-objectification, and combat such experiences.
+
+As stated previously, we did not find a significant effect between actor SSO and actor authenticity, which suggests that there is not sufficient evidence to support the claim that partner objectification is the cause for the diverse range of negative effects related to relationship inauthenticity. However, we did observe a significant partner effect of objectification on actor self-objectification, which does align with our hypothesis that theorized objectification from other women can also cause women to self-objectify just as they do within interactions between male-female pairs. 
+
+##Sexism and Sexual Discrimination
+Sexism has recently been found to be related to the objectification of women, but not men, for both men and women [@harsey2020men]. Empirical evidence illustrates how women continue to be objects of interpersonal discrimination and expereince daily sexist hassles [@swimetal]. One form of interpersonal discrimination women face is the process by which their whole being is viewed as a collection of sexualized body parts valued predominantly for commodification, a phenomena termed sexual objectification [@Bartky]. Sexual objectification occurs with both “endless variety and monotonous similarity,” and is thus mediated by unique combinations of race, ethnicity, sexuality, age, and class [@fredricksonetal2011; @rubin1975, cited in @frasernicholson1989, p. 28]. Amid such heterogeneity though, “having a reproductively mature female body” proposed by @robertsfredrickson is likely to create a shared vulnerability to sexual objectification and a variety of shared negative experiences as a result. 
+
+##Limitations and Future Directions
+
+###Sample Characteristics
+The sample of the current study was comprised of Western women, being that sexual objectification is most prevalent in this culture [@loughnan2015], and research on objectification conducted outside of Western or Westernized countries is scarce [@moradi2008]. Because “bodies exist within social and cultural contexts, and hence are also constructed through sociocultural practices and discourses” [@robertsfredrickson, p.174], it is important to consider how diverse social identities within unique cultural contexts may inform sexual objectification phenomenon to test the cross-cultural applicability of theoretical frameworks [@loughnan2015]. Further, sexualzing experiences and self-objectification are thought to begin a very young age, and thus, researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014; @bury2016]. Considering the fact that the average mean age of the investigated participants of this current study was 18.85 years, research among younger and older individuals is needed, especially because self-objectification may change over time [@robertsfredrickson]. It may be valuable to question the extent to which children, adolescents, or emerging adults of different races or ethnicities are exposed to varied amounts of sexulizing content. 
+
+###Measurement
+Also, future experiments or longitudinal studies should explore the external validity of the notions of self-objectification and how the operalization of self-objectification may be improved. 
+
+###Alternative Model
+@puvia2013being alternative model. TSO -> SOO, mediated by SSO. 
+
+##Clinical Implications
+Regardless, the results from the current analysis highlight how subtle forms of sexist discrimination operate to inform prevention and intervention efforts in both clinical and educational contexts. These results are quite useful for promoting mental health and within early action programs for girls and young women, where scholars and practitioners might provide the tools necessary to circumvent or mitigate negative effects on self-objectification, and combat such experiences.
+
+#Conclusion
+The results of this study demonstrate the complex and ambivalent nature of female sexual objectification and additionally highlight the psychological and social consequences of such objectification processes on women’s social relationships and well-being. 
 
 
 #References
